# asterisk-voicekit-modules

./: Dockerfile  INSTALL  README.md
.github/workflows/: docker-image.yml
asterisk_modules/: bootstrap
asterisk_modules/app_grpcsttbackground/: AUTHORS  INSTALL  Makefile.am  app_grpcsttbackground.c  channel_manager.cpp  channel_manager.h  configure.ac  grpc_stt.cpp  grpc_stt.h  jwt.cpp  jwt.h  stt.proto
asterisk_modules/app_grpcsttbackground/samples/: grpcstt.conf.sample
asterisk_modules/app_playbackground/: Makefile.am  RAII.h  app_playbackground.c  bootstrap  bytequeue.cpp  bytequeue.h  channel.cpp  channel.h  channelbackend.cpp  channelbackend.h  configure.ac  grpctts.cpp  grpctts.h  grpctts_conf.c  grpctts_conf.h  job.cpp  job.h  jwt.cpp  stream_layers.c  stream_layers.h  tts.proto
asterisk_modules/app_playbackground/samples/: grpctts.conf.sample
asterisk_modules/app_waitevent/: Makefile.am  app_waitevent.c  bootstrap  configure.ac
asterisk_modules/func_gettimensec/: INSTALL  Makefile.am  configure.ac  func_gettimensec.c
container-data/: extensions.ael  extract_text  grpcstt.conf  grpctts.conf  sip.conf
container-mnt/: extensions.ael  grpcstt.conf  grpctts.conf
examples/combined/combined_stt_tts/etc/asterisk/: extensions.ael  grpcstt.conf
examples/stt/stt_basic/etc/asterisk/: extensions.ael
examples/stt/stt_detailed/etc/asterisk/: extensions.ael  grpcstt.conf
examples/stt/stt_error_handling/etc/asterisk/: extensions.ael
examples/stt/stt_with_playback/etc/asterisk/: extensions.ael
examples/stt/stt_with_playback_advanced/etc/asterisk/: extensions.ael
examples/stt/stt_with_playback_ami/: ami-request.sh
examples/stt/stt_with_playback_ami/etc/asterisk/: extensions.ael
examples/tts/tts_basic/etc/asterisk/: extensions.ael
examples/tts/tts_event_driven/etc/asterisk/: extensions.ael
examples/tts/tts_event_driven_ami/: README  ami-request.sh
examples/tts/tts_event_driven_ami/etc/asterisk/: extensions.ael
examples/tts/tts_wait_for_event/etc/asterisk/: extensions.ael  grpctts.conf
